--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -92,11 +92,27 @@ div#signup-page{
 }
 div.top-header div.search-form ul.menu li.active a {
     color: #fefefe;
-    background: $primary-color;
+    background: $black;
     border-top-right-radius: rem-calc(15);
  	border-top-left-radius: rem-calc(15);
 
 }
+
+input::-webkit-input-placeholder {
+    color: $primary-color;
+    font: solid 14px Georgia;
+}
+
+input::-moz-placeholder {
+    color: $primary-color;
+    font: solid 14px Georgia;
+}
+
+input::-ms-input-placeholder{
+    color: $primary-color;
+    font: solid 14px Georgia;
+}
+
 div.top-header{
     
    /* 
@@ -133,7 +149,7 @@ div.top-header{
 	    div.search-form{
             border-radius: rem-calc(25);
 	 	    background: transparent;
-	 	    opacity: 0.9;
+	 	    opacity: 0.8;
             div label{
             @include breakpoint(medium down){
                 display:none;
@@ -168,17 +184,18 @@ div.top-header{
  			
  		    }   
  		    form{
- 			    background: $primary-color;
+ 			    background: $black;
  			    color: #ffc600;
  			    border-top-right-radius: rem-calc(5);
  			    border-bottom-left-radius: rem-calc(5);
  			    border-bottom-right-radius: rem-calc(5);
  			    padding: rem-calc(0 10);
  			    input{
- 				    background: $white;
+                    height: rem-calc(38);
  				    color: black;
  				    border-radius: rem-calc(5);
  			    }
+               
  			    label{
  				    color: #ffc600;
  				    font: italic bold 14px/30px Georgia, serif;
@@ -186,12 +203,15 @@ div.top-header{
 
  			    }
                 select{
+                    height: rem-calc(38);
                     border-radius: rem-calc(5);
+                    font-size: rem-calc(14);
                 }
 
  			    button{
  				    background: darken($gold, 5%);
                     font: italic bold 16px Georgia serif;
+                    height: rem-calc(40);
                     border-radius: rem-calc(5);
  			}
  		}
