added icons to search form

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -112,40 +112,32 @@ input::-ms-input-placeholder{
     font: solid 14px Georgia;
 }
 
-div.top-header{
-    
-   /* 
-    @include breakpoint(medium large){
-        height: rem-calc(550);
-    }
-    @include breakpoint(xlarge){
-        height: 50%;
-
-    }*/
-   
-        #big-banner{
-            position: relative;
-        }
-    .search-section{
-            position: absolute;
-            top: 22%;
-            left:0;
-            width: 100%;
-            @include breakpoint(medium){
+.small-search-form{
+    background: blue;
+}
+.top-header{
+    position: relative;
+    .search-form-container{
+        position: absolute;
+        top: 10%;
+        width: 100%;
+        @include breakpoint(medium){
                 @include breakpoint(landscape){
-                    top: 47%;
+                    top: 10%;
                 }
             }
             @include breakpoint(large){
-                top: 40%;
+                top: 20%;
             }
             @include breakpoint(xlarge){
                 font-size: rem-calc(18);
-                top: 40%;
+                top: 20%;
             }
-                        
     }
-	    div.search-form{
+
+    
+    div.search-form{
+        
             opacity: 0.9;
 
             border-radius: rem-calc(25);
@@ -188,7 +180,7 @@ div.top-header{
                     height: rem-calc(38);
  				    color: black;
  				    border-radius: rem-calc(5);
-                    padding: rem-calc(0);
+                    padding: rem-calc(0 30);
                     margin-bottom: rem-calc(5);
  			    }
                
@@ -200,19 +192,128 @@ div.top-header{
                     height: rem-calc(38);
                     border-radius: rem-calc(5);
                     font-size: rem-calc(14);
+                    padding: rem-calc(0 30)
                 }
 
  			    button{
  				    background: darken($gold, 5%);
-                    font: italic bold 16px Georgia serif;
+                    padding: rem-calc(0);
+                    font: italic bold 18px Georgia serif;
                     height: rem-calc(40);
                     border-radius: rem-calc(5);
- 			}
+                    
+ 			    }
+                .input-icon{
+                    font-size: rem-calc(30);
+                }
+                .flyfrom{
+                    .icon-div{
+                        position: absolute; 
+                        top: 38%; 
+                        left: 18.5%; 
+                        width: 15px;
+                        @include breakpoint(small only){
+                            top: 22%;
+                            left:  2%;
+                            
+                        }
+                        @include breakpoint(medium only){
+                            top: 22%;
+                            left: 0.5%;
+                            
+                        }
+                        @include breakpoint(large only){
+                            left: 0.5%;
+                        }
+                        @include breakpoint(xlarge only){
+                            left: 3%;
+                        }
+                        @include breakpoint(xxlarge only){
+                            left: 8%;
+                        }
+                    }
+                }
+                .flyto{
+                    .icon-div{
+                        position: absolute; 
+                        top: 38%; 
+                        left: 38.5%; 
+                        width: 15px;
+                        @include breakpoint(small only){
+                            top: 32%;
+                            left: 2%;
+                        }
+                        @include breakpoint(medium only){
+                            top: 32%;
+                            left: 0.5%;
+                        }
+                        @include breakpoint(xlarge only){
+                            left: 33%;
+                        }
+                        @include breakpoint(large only){
+                            left: 42%;
+                        }
+                        @include breakpoint(xxlarge only){
+                            left: 35%;
+                        }
+                    }
+                }
+                .departure{
+                    .icon-div{
+                        position: absolute; 
+                        top: 65%; 
+                        left: 18.5%; 
+                        width: 15px;
+                        @include breakpoint(small only){
+                            top: 55%;
+                            left: 2%;
+                        }
+                        @include breakpoint(medium only){
+                            top: 55%;
+                            left: 0.5%;
+                        }
+                       @include breakpoint(xlarge only){
+                            left: 3%;
+                       }
+                       @include breakpoint(large only){
+                            left: 0.2%;
+                       }
+                       @include breakpoint(xxlarge only){
+                            left: 8%;
+                       }
+                    }
+                }
+                .return{
+                    .icon-div{
+                        position:absolute; 
+                        top: 65%; 
+                        left: 30.5%; 
+                        width: 15px;
+                        @include breakpoint(small only){
+                            top: 55%;
+                            left: 51%;
+                        }
+                        @include breakpoint(medium only){
+                            top: 55%;
+                            left: 51%;
+                        }
+                        @include breakpoint(large only){
+                            left: 25%;
+                        }
+                        @include breakpoint(xlarge only){
+                            left: 21%;
+                        }
+                        @include breakpoint(xxlarge only){
+                            left: 24%;
+                        }
+                    }
+                }
+               
  		}
-
- 		
-	}
+        
+    }
 }
+
 
 .menu-icon{
 	margin: rem-calc(10);
