--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -87,9 +87,10 @@ $breakpoints: (
   large: 1019px,
   xlarge: 1200px,
   xxlarge: 1440px,
+  xxxlarge: 1824px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large xlarge xxlarge);
+$breakpoint-classes: (small medium large xlarge xxlarge xxxlarge);
 
 // 3. The Grid
 // -----------
@@ -245,7 +246,7 @@ $breadcrumbs-item-slash: true;
 $button-padding: 0.85em 1em;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
-$button-background: $primary-color;
+$button-background: $gold;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
 $button-color: $white;
 $button-color-alt: $black;
