--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -40,6 +40,12 @@ div.top-bar{
 	}
 .top-bar ul{
 	background: transparent;
+    .submenu{
+        background: $white;   
+    }
+    .submenu li:hover{
+        background: $gold; 
+    }
 	li{
 		a{
 			color: lighten($primary-color, 20%);
@@ -50,16 +56,16 @@ div.top-bar{
 }
 
 .off-canvas ul li{
-    border: 1px solid $primary-color;
+    //border: 1px solid $primary-color;
    a{
-        color: $white;
+        color: $primary-color;
     }
     a:hover{
-        background: $primary-color;
+        background: $gold;
     }
 }
 .off-canvas{
-    background: lighten($primary-color, 20%);
+    background: $white;
 }
 .touch-canvas:hover, .touch-canvas:active{
     background: $primary-color;
@@ -118,14 +124,7 @@ input::-ms-input-placeholder{
         position: absolute;
         top: 5%;
         width: 100%;
-        @include breakpoint(medium){
-                @include breakpoint(landscape){
-                    top: 10%;
-                }
-            }
-            @include breakpoint(large){
-                top: 20%;
-            }
+
             @include breakpoint(xlarge){
                 font-size: rem-calc(18);
                 top: 20%;
@@ -399,10 +398,14 @@ div.offer-list-medium{
 }
 
 footer {
-	background-color: $secondary-color;
+    
 	padding-top:rem-calc(30);
 	color: $black;
 
+    .contact-information, .about-us{
+        color: lighten($primary-color, 20%);
+        font: 18px Georgia serif;
+    }
 	.menu{
 		a {
 			color:$black;
