--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -416,7 +416,7 @@ $menu-margin: 0;
 $menu-margin-nested: 1rem;
 $menu-item-padding: 0.7rem 1rem;
 $menu-item-color-active: $white;
-$menu-item-background-active: $gold;
+$menu-item-background-active: darken($gold, 5%);
 $menu-icon-spacing: 0.25rem;
 $menu-item-background-hover: $light-gray;
 $menu-border: $light-gray;
